fixed most styling issues and bugs caused by the rework